--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     <div class="small-container">
         <div class="row">
             <div class="col-2">
-                <a href="#BikOO-project/Ebike.html" target=" "><img src="exclusive1.png" class="offer-img"></a>
+                <a href="#Ebike.html" target=" "><img src="exclusive1.png" class="offer-img"></a>
             </div>
             <div class="of">
                 <p style="color: black;">Available on BikOO </p>
